<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_enter_your_name"
        android:layout_gravity="center_horizontal"
        android:text="Enter your name"
        android:textSize="16sp"
        android:textColor="#000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_enter_your_name"
        android:textColor="#B1B1B1"
        android:hint="@string/enter_your_name"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_ok"
        android:layout_marginTop="16dp"
        android:text="OK"
        android:textColor="#E91E63"
        android:layout_gravity="end"
        android:textAlignment="textEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>