<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <androidx.recyclerview.widget.RecyclerView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:id="@+id/recycler_view"
       />

   <androidx.appcompat.widget.AppCompatButton
       android:id="@+id/button_dialog"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:text="Show Dialog"
       android:textAllCaps="false"
       android:textColor="@color/ic_white"
       android:background="#000"
       android:paddingHorizontal="8dp"
       android:layout_width="wrap_content"
       android:layout_height="35dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>